[gd_scene load_steps=7 format=4 uid="uid://bmlsmr7nmdldg"]

[ext_resource type="Script" uid="uid://c55hsce6tmvd5" path="res://scenes/Tiles/tile_controller.gd" id="1_sg250"]
[ext_resource type="Texture2D" uid="uid://cn3eu0pdpr15s" path="res://assets/tileset/topTiles.png" id="2_gkvgq"]
[ext_resource type="TileSet" uid="uid://brb2w8x0j2vxq" path="res://assets/tileset/tile_controller.tres" id="3_4uw7a"]
[ext_resource type="Script" uid="uid://daq82wjgw2cmp" path="res://scenes/Tiles/cell_highlights.gd" id="4_qxco7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ifirn"]
texture = ExtResource("2_gkvgq")
texture_region_size = Vector2i(55, 57)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
1:14/0 = 0
2:14/0 = 0
4:14/0 = 0
5:14/0 = 0

[sub_resource type="TileSet" id="TileSet_53my0"]
tile_shape = 3
tile_size = Vector2i(65, 65)
sources/2 = SubResource("TileSetAtlasSource_ifirn")

[node name="TileController" type="Node2D"]
script = ExtResource("1_sg250")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAAAAQADAAMAAAADAAAAAQADAAMAAAACAP//AQADAAMAAAADAP//AQADAAMAAAADAP7/AQADAAMAAAAEAP7/AQADAAMAAAAEAP3/AQADAAMAAAAEAP//AQADAAMAAAACAP7/AQADAAMAAAADAP3/AQADAAMAAAAEAPz/AQADAAMAAAAFAPz/AQADAAMAAAD//wIAAQADAAMAAAAAAAIAAQADAAMAAAABAAIAAQAAAAMAAAACAAIAAQAAAAMAAAD+/wMAAQACAAIAAAD//wMAAQACAAEAAAAAAAMAAQADAAIAAAD+/wIAAQADAAMAAAD9/wIAAQADAAMAAAD8/wMAAQACAAIAAAD7/wMAAQACAAEAAAD6/wQAAQACAAEAAAD6/wUAAQACAAAAAAD7/wUAAQACAAAAAAD8/wUAAQACAAAAAAD7/wYAAQACAAAAAAD8/wYAAQACAAAAAAD8/wcAAQACAAAAAAD9/wUAAQACAAIAAAD8/wQAAQACAAEAAAD7/wQAAQACAAEAAAADAAEAAQAAAAMAAAAEAAEAAQAAAAMAAAAFAAEAAQAAAAMAAAAGAAEAAQAAAAMAAAAHAAEAAQAAAAMAAAAHAAIAAQAAAAMAAAAGAAIAAQAAAAMAAAAFAAIAAQAAAAMAAAACAAEAAQAAAAMAAAABAAEAAQAAAAMAAAABAAAAAQAAAAMAAAAAAAAAAQAAAAMAAAD//wEAAQAAAAMAAAAAAAEAAQAAAAMAAAAGAAMAAQAAAAMAAAAGAAQAAQAAAAMAAAAHAAMAAQAAAAMAAAAHAAQAAQAAAAMAAAAGAAUAAQAAAAMAAAAFAAYAAQAAAAMAAAAEAAcAAQAAAAMAAAAEAAYAAQAAAAMAAAAFAAUAAQAAAAMAAAAFAAQAAQAAAAMAAAADAAcAAQAAAAMAAAADAAgAAQAAAAMAAAACAAkAAQAAAAMAAAABAAoAAQAAAAMAAAAAAAsAAQAAAAMAAAD//wsAAQAAAAMAAAD+/wwAAQAAAAMAAAD+/wsAAQAAAAMAAAD9/wsAAQAAAAMAAAD8/wwAAQAAAAMAAAD8/wsAAQAAAAMAAAD7/wwAAQAAAAMAAAD6/w0AAQAAAAMAAAD5/w0AAQAAAAMAAAD5/w4AAQAAAAMAAAADAAIAAQADAAIAAAAEAAIAAQADAAMAAAAEAAMAAQADAAMAAAAFAAMAAQADAAMAAAAEAAQAAQADAAMAAAAEAAUAAQADAAMAAAADAAYAAQADAAMAAAACAAcAAQADAAMAAAACAAgAAQADAAMAAAABAAkAAQADAAIAAAAAAAoAAQADAAMAAAD//woAAQADAAIAAAD+/woAAQADAAMAAAD9/woAAQADAAMAAAD8/woAAQADAAMAAAD7/wsAAQADAAMAAAD6/wwAAQADAAMAAAD8/wkAAQADAAMAAAD9/wkAAQADAAMAAAD+/wkAAQADAAIAAAD//wkAAQADAAIAAAAAAAkAAQADAAIAAAABAAgAAQADAAIAAAAAAAgAAQADAAIAAAAAAAcAAQADAAIAAAABAAcAAQADAAIAAAACAAYAAQADAAIAAAADAAUAAQADAAIAAAADAAQAAQADAAIAAAADAAMAAQADAAIAAAACAAMAAQADAAIAAAABAAQAAQADAAIAAAACAAQAAQADAAIAAAABAAUAAQADAAIAAAACAAUAAQADAAIAAAABAAYAAQADAAIAAAD//wgAAQADAAIAAAD//wcAAQADAAIAAAD//wYAAQADAAIAAAAAAAUAAQADAAIAAAAAAAQAAQACAAEAAAABAAMAAQADAAIAAAAAAAYAAQADAAIAAAD+/wgAAQADAAMAAAD9/wgAAQADAAIAAAD+/wcAAQADAAMAAAD+/wYAAQADAAIAAAD//wUAAQACAAEAAAD//wQAAQACAAEAAAD+/wQAAQACAAIAAAD9/wYAAQACAAIAAAD+/wUAAQACAAIAAAD9/wQAAQACAAIAAAD9/wMAAQACAAIAAAD9/wcAAQACAAAAAAD8/wgAAQACAAAAAAD7/wkAAQACAAAAAAD6/woAAQACAAAAAAD5/wsAAQACAAAAAAD5/wwAAQADAAMAAAD6/wsAAQADAAMAAAD7/woAAQADAAMAAAD7/wgAAQACAAAAAAD7/wcAAQACAAAAAAD5/wUAAQACAAEAAAD5/wQAAQACAAEAAAD5/wYAAQACAAAAAAD5/wcAAQACAAAAAAD5/wgAAQACAAAAAAD6/wkAAQACAAAAAAD5/woAAQACAAAAAAD4/wwAAQADAAMAAAD3/wwAAQADAAMAAAD3/wsAAQACAAAAAAD3/woAAQACAAAAAAD3/wkAAQACAAAAAAD3/wgAAQACAAAAAAD3/wcAAQADAAMAAAD4/wYAAQACAAAAAAD4/wUAAQACAAEAAAD4/wQAAQACAAEAAAD4/wcAAQACAAAAAAD4/wgAAQACAAAAAAD4/wkAAQACAAAAAAD5/wkAAQADAAMAAAD4/woAAQACAAAAAAD4/wsAAQACAAAAAAD6/wcAAQACAAAAAAD6/wYAAQACAAAAAAD//wwAAQADAAMAAAAAAAwAAQADAAMAAAABAAsAAQADAAMAAAACAAoAAQAAAAMAAAADAAoAAQADAAMAAAAEAAkAAQADAAMAAAAEAAgAAQAAAAMAAAAFAAgAAQADAAMAAAAFAAcAAQAAAAMAAAAGAAcAAQADAAMAAAAGAAYAAQAAAAMAAAAHAAYAAQADAAMAAAAIAAUAAQADAAMAAAAIAAQAAQADAAMAAAAJAAQAAQADAAMAAAAJAAMAAQADAAMAAAAJAAIAAQADAAMAAAAKAAEAAQADAAMAAAAJAAEAAQADAAMAAAAJAAAAAQADAAMAAAAJAP//AQADAAMAAAAJAP7/AQADAAMAAAAIAP7/AQADAAMAAAAHAP7/AQADAAMAAAAGAP7/AQADAAMAAAAGAP//AQADAAMAAAAFAP//AQADAAMAAAD//w0AAQADAAMAAAD+/w0AAQADAAMAAAD9/w4AAQADAAMAAAD9/w0AAQADAAMAAAD8/w4AAQADAAMAAAD8/w0AAQADAAMAAAD7/w4AAQADAAMAAAD6/w8AAQADAAMAAAD5/w8AAQADAAMAAAD5/xAAAQADAAMAAAD4/xAAAQADAAMAAAD3/xAAAQADAAMAAAD2/xAAAQADAAMAAAD1/xAAAQADAAMAAAD0/xEAAQADAAMAAADz/xIAAQADAAMAAAD0/xIAAQADAAMAAAD0/xMAAQADAAMAAAD0/xQAAQADAAMAAAD1/xQAAQADAAMAAAD1/xUAAQADAAMAAAD1/xYAAQADAAMAAAD2/xYAAQADAAMAAAADAAkAAQAAAAMAAAAHAAUAAQAAAAMAAAAIAAIAAQAAAAMAAAAIAAEAAQAAAAMAAAAIAAAAAQAAAAMAAAAHAAAAAQAAAAMAAAAGAAAAAQAAAAMAAAAFAAAAAQAAAAMAAAAEAAAAAQAAAAMAAAD9/wwAAQAAAAMAAAD7/w0AAQAAAAMAAAD6/w4AAQAAAAMAAAD4/w4AAQAAAAMAAAD3/w8AAQAAAAMAAAD3/w4AAQAAAAMAAAD2/w4AAQAAAAMAAAD1/w8AAQAAAAMAAAD1/w4AAQAAAAMAAAD0/w8AAQAAAAMAAAD2/w8AAQAAAAMAAAD4/w8AAQAAAAMAAAD0/xAAAQAAAAMAAADz/xEAAQAAAAMAAADy/xIAAQAAAAMAAADy/xMAAQAAAAMAAADz/xMAAQAAAAMAAADz/xQAAQAAAAMAAADz/xUAAQAAAAMAAADz/xYAAQAAAAMAAADz/xcAAQAAAAMAAAD0/xcAAQAAAAMAAAD1/xcAAQAAAAMAAAD1/xgAAQAAAAMAAAD2/xcAAQAAAAMAAAD2/xgAAQAAAAMAAAD3/xcAAQAAAAMAAAD4/xcAAQAAAAMAAAD5/xYAAQAAAAMAAAD6/xUAAQADAAMAAAD5/xUAAQADAAMAAAD4/xUAAQADAAMAAAD4/xYAAQADAAMAAAD3/xYAAQADAAMAAAD0/xYAAQADAAMAAAD0/xUAAQADAAMAAAD1/xMAAQADAAMAAAD2/xIAAQADAAMAAAD2/xEAAQADAAMAAAD1/xEAAQADAAMAAAD1/xIAAQADAAMAAAD3/xIAAQADAAMAAAD4/xEAAQADAAMAAAD5/xEAAQADAAMAAAD6/xEAAQADAAMAAAD7/xEAAQADAAMAAAD7/xIAAQADAAMAAAD7/xMAAQADAAMAAAD6/xQAAQADAAMAAAD5/xQAAQADAAMAAAD4/xQAAQADAAMAAAD5/xMAAQADAAMAAAD4/xMAAQADAAMAAAD6/xMAAQADAAMAAAD3/xUAAQADAAMAAAD2/xUAAQADAAMAAAD2/xQAAQADAAMAAAD2/xMAAQADAAMAAAD3/xMAAQADAAMAAAD3/xQAAQADAAMAAAD4/xIAAQADAAMAAAD5/xIAAQADAAMAAAD6/xIAAQADAAMAAAD3/xEAAQADAAMAAAD4/w0AAQADAAMAAAD2/w0AAQADAAMAAAD1/w0AAQADAAMAAAD0/w4AAQADAAMAAADz/w8AAQADAAMAAADy/xAAAQADAAMAAADy/xEAAQADAAMAAADx/xIAAQADAAMAAADx/xMAAQADAAMAAADw/xQAAQADAAMAAADw/xUAAQADAAMAAADx/xUAAQADAAMAAADw/xYAAQADAAMAAADx/xYAAQADAAMAAADy/xYAAQAAAAMAAADx/xcAAQADAAMAAADy/xcAAQAAAAMAAADy/xgAAQADAAMAAADy/xkAAQADAAMAAADy/xoAAQADAAMAAADz/xoAAQADAAMAAAD0/xoAAQADAAMAAAD1/xoAAQADAAMAAAD2/xoAAQADAAMAAAD3/xoAAQADAAMAAAD4/xkAAQADAAMAAAD4/xoAAQADAAMAAAD3/xsAAQADAAMAAAD2/xsAAQADAAMAAAD1/xwAAQADAAMAAAD1/xsAAQADAAMAAAD0/xwAAQADAAMAAADz/xwAAQADAAMAAADy/xwAAQADAAMAAADy/xsAAQADAAMAAADx/xsAAQADAAMAAADx/xoAAQADAAMAAADz/xsAAQADAAMAAAD0/xsAAQADAAMAAADx/xkAAQADAAMAAADx/xgAAQADAAMAAADw/xgAAQADAAMAAADw/xkAAQADAAMAAADw/xoAAQADAAMAAADv/xkAAQADAAMAAADw/xcAAQADAAMAAADv/xcAAQADAAMAAADv/xgAAQADAAMAAADu/xgAAQADAAMAAADv/xYAAQADAAMAAADv/xUAAQADAAMAAADv/xQAAQADAAMAAADw/xMAAQADAAMAAADv/xMAAQADAAMAAADw/xIAAQADAAMAAADw/xEAAQADAAMAAADx/xEAAQADAAMAAADx/xAAAQADAAMAAADy/w8AAQADAAMAAADy/w4AAQADAAMAAADz/w4AAQADAAMAAADz/w0AAQADAAMAAAD0/w0AAQADAAMAAAD1/wwAAQADAAMAAAD2/wwAAQADAAMAAAD9/wEAAQADAAMAAAD9/wAAAQADAAMAAAD+////AQADAAMAAAD+//7/AQADAAMAAAD9//7/AQADAAMAAAD+//3/AQADAAMAAAD9//3/AQADAAMAAAD8////AQADAAMAAAD9////AQADAAMAAAD8/wAAAQADAAMAAAD8/wEAAQADAAMAAAD8/wIAAQADAAMAAAD2/wsAAQADAAMAAAD1/wsAAQADAAMAAAD0/wwAAQADAAMAAADx/w8AAQADAAMAAADw/w8AAQADAAMAAADw/xAAAQADAAMAAADv/xAAAQADAAMAAADv/xEAAQADAAMAAADu/xEAAQADAAMAAADu/xIAAQADAAMAAADt/xMAAQADAAMAAADt/xQAAQADAAMAAADt/xUAAQADAAMAAADu/xUAAQADAAMAAADu/xYAAQADAAMAAADu/xcAAQADAAMAAADv/xIAAQADAAMAAADu/xMAAQADAAMAAADu/xQAAQADAAMAAAD0/wsAAQADAAMAAAD1/woAAQADAAMAAAD1/wkAAQADAAMAAAD2/wgAAQADAAMAAAD1/wgAAQADAAMAAAD2/wcAAQADAAMAAAD2/wYAAQADAAMAAAD3/wUAAQADAAMAAAD3/wYAAQADAAMAAAD2/wkAAQADAAMAAAD2/woAAQADAAMAAAD3/xkAAQAAAAMAAAD3/xgAAQAAAAMAAAD2/xkAAQAAAAMAAAD1/xkAAQAAAAMAAAD0/xkAAQAAAAMAAADz/xkAAQAAAAMAAAD0/xgAAQAAAAMAAADz/xgAAQAAAAMAAADy/xUAAQAAAAMAAADy/xQAAQAAAAMAAADx/xQAAQAAAAMAAADz/xAAAQAAAAMAAAAIAAMAAQAAAAMAAAAIAP//AQAAAAMAAAAHAP//AQAAAAMAAAD+/wEAAQAAAAMAAAD+/wAAAQAAAAMAAAD//wAAAQAAAAMAAAD/////AQAAAAMAAAAAAP//AQAAAAMAAAABAP7/AQAAAAMAAAABAP//AQAAAAMAAAAAAP7/AQAAAAMAAAD///7/AQAAAAMAAAAAAP3/AQAAAAMAAAAAAPz/AQAAAAMAAAABAPz/AQAAAAMAAAABAPv/AQAAAAMAAAACAPr/AQAAAAMAAAABAPr/AQAAAAMAAAACAPn/AQAAAAMAAAACAPj/AQAAAAMAAAADAPj/AQAAAAMAAAADAPf/AQAAAAMAAAACAP3/AQADAAMAAAABAP3/AQADAAMAAAACAPz/AQADAAMAAAADAPv/AQADAAMAAAACAPv/AQADAAMAAAADAPr/AQADAAMAAAADAPn/AQADAAMAAAAEAPj/AQADAAMAAAAEAPn/AQADAAMAAAAEAPr/AQADAAMAAAADAPz/AQADAAMAAAAFAPv/AQACAAEAAAAEAPv/AQADAAMAAAD7/wIAAQACAAEAAAD6/wMAAQACAAEAAAAFAP7/AQACAAEAAAAFAP3/AQACAAEAAAAGAP3/AQACAAEAAAAGAPz/AQACAAEAAAAHAPz/AQACAAEAAAAHAPv/AQACAAEAAAAGAPv/AQACAAEAAAAFAPr/AQACAAEAAAAFAPn/AQACAAEAAAAGAPn/AQACAAEAAAAGAPr/AQACAAEAAAAHAP3/AQACAAEAAAAIAP3/AQACAAEAAAAJAPz/AQACAAEAAAAIAPz/AQACAAEAAAAJAP3/AQACAAEAAAAKAP3/AQACAAEAAAAKAP7/AQACAAEAAAALAP7/AQADAAMAAAAMAP3/AQADAAMAAAAMAPz/AQADAAMAAAALAPz/AQADAAMAAAALAP3/AQADAAMAAAALAPv/AQADAAMAAAAKAPv/AQADAAMAAAAKAPz/AQADAAMAAAAJAPv/AQADAAMAAAAIAPv/AQADAAMAAAAJAPr/AQADAAMAAAAIAPr/AQADAAMAAAAJAPn/AQADAAMAAAAKAPr/AQADAAMAAAALAPn/AQADAAMAAAAMAPj/AQADAAMAAAAMAPn/AQADAAMAAAALAPr/AQADAAMAAAAMAPv/AQADAAMAAAD6/xAAAQADAAMAAAD7/w8AAQADAAMAAAD7/xAAAQADAAMAAAD8/xAAAQADAAMAAAD8/w8AAQADAAMAAAD9/w8AAQADAAMAAAD+/w4AAQADAAMAAAD//w4AAQADAAMAAAAAAA0AAQADAAMAAAABAA0AAQADAAMAAAABAAwAAQADAAMAAAACAAwAAQADAAMAAAACAAsAAQADAAMAAAADAAsAAQADAAMAAAAEAAoAAQADAAMAAAAFAAkAAQADAAMAAAAGAAgAAQADAAMAAAAHAAgAAQADAAMAAAAIAAcAAQADAAMAAAAIAAYAAQADAAMAAAAJAAUAAQADAAMAAAAKAAQAAQADAAMAAAALAAMAAQADAAMAAAALAAIAAQADAAMAAAALAAEAAQADAAMAAAALAAAAAQADAAMAAAAKAAAAAQADAAMAAAAKAP//AQADAAMAAAALAP//AQADAAMAAAAMAP//AQADAAMAAAAMAP7/AQADAAMAAAAKAAIAAQADAAMAAAAKAAMAAQADAAMAAAAHAAcAAQADAAMAAAAGAAkAAQADAAMAAAAFAAoAAQADAAMAAAD///3/AQADAAMAAAD///z/AQADAAMAAAD///v/AQADAAMAAAAAAPv/AQADAAMAAAAAAPr/AQADAAMAAAABAPn/AQADAAMAAAAAAPn/AQADAAMAAAABAPj/AQADAAMAAAACAPf/AQADAAMAAAABAPf/AQADAAMAAAACAPb/AQADAAMAAAACAPX/AQADAAMAAAADAPX/AQADAAMAAAADAPT/AQADAAMAAAAEAPP/AQADAAMAAAAFAPL/AQADAAMAAAAIAPn/AQADAAMAAAAHAPr/AQADAAMAAAAHAPn/AQADAAMAAAAHAPj/AQADAAMAAAAGAPj/AQADAAMAAAAFAPj/AQADAAMAAAAFAPf/AQADAAMAAAAGAPf/AQADAAMAAAAHAPb/AQADAAMAAAAIAPX/AQADAAMAAAAIAPb/AQADAAMAAAAJAPX/AQADAAMAAAAKAPX/AQADAAMAAAALAPX/AQADAAMAAAALAPb/AQADAAMAAAAMAPb/AQADAAMAAAALAPf/AQADAAMAAAAMAPf/AQADAAMAAAALAPj/AQADAAMAAAAKAPn/AQADAAMAAAAKAPj/AQADAAMAAAAKAPf/AQADAAMAAAAJAPf/AQADAAMAAAAJAPb/AQADAAMAAAAIAPf/AQADAAMAAAAHAPf/AQADAAMAAAAIAPj/AQADAAMAAAAJAPj/AQADAAMAAAAKAPb/AQADAAMAAAD6/wgAAQACAAAAAAD3/w0AAQADAAMAAAA=")
tile_set = ExtResource("3_4uw7a")

[node name="HighlightTileLayer" type="TileMapLayer" parent="TileMapLayer"]
modulate = Color(1, 1, 1, 0.458824)
tile_set = SubResource("TileSet_53my0")
script = ExtResource("4_qxco7")

[node name="CellHighlights" type="Node2D" parent="."]

[node name="Unit" type="Node2D" parent="."]

[connection signal="highlight_cell" from="." to="CellHighlights" method="_on_tile_controller_highlight_cell"]
